[workspace]
members = ["resplus", "resplus-derive", "resplus-impl", "test-util"]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["km0e <kmdr.error@gmail.com>"]
repository = "https://github.com/km0e/resplus.git"

[workspace.dependencies]

[profile.release]
lto = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "fat"
