[package]
name = "resplus-derive"
version = "0.1.2"
edition.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true

[lib]
proc-macro = true

[features]
default = ["async"]
async = ["resplus-impl/async"]
full = ["async"]

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.39"
syn = { version = "2.0.99", features = ["full"] }
resplus-impl = { version = "0.1.2", optional = true }

[[test]]
name = "test"
path = "src/tests.rs"

[dev-dependencies]
async-trait = { version = "0.1.87" }
test-util = { path = "../test-util" }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
