[package]
name = "resplus-derive"
version = "0.1.3"
edition.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true

[lib]
proc-macro = true

[features]
default = ["async"]
async = ["resplus-impl/async"]
full = ["async"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
resplus-impl = { version = "0.1.3", optional = true }

[[test]]
name = "test"
path = "src/tests.rs"

[dev-dependencies]
async-trait = { version = "0.1" }
test-util = { path = "../test-util" }
tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }
