[package]
name = "resplus-impl"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true

[features]
default = ["async"]
async = ["dep:async-trait"]
full = ["async"]

[dependencies]
async-trait = { version = "0.1.87", optional = true }

[dev-dependencies]
test-util = { path = "../test-util" }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
