[package]
name = "resplus"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
license.workspace = true

[features]
default = ["async"]
derive = ["dep:resplus-derive"]
async = ["resplus-impl/async"]
full = ["resplus-impl/full", "derive"]

[dependencies]
resplus-derive = { version = "0.1.1", path = "../resplus-derive", optional = true }
resplus-impl = { version = "0.1.1", path = "../resplus-impl", optional = true }

[dev-dependencies]
test-util = { path = "../test-util" }
